remove planning router
